2006-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.0, it's about time I made a
	stable release.

2006-03-15  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (parser_step_from): If we fail to find a
	From line, set an error state. Also fixed the End-Of-Data check to
	prevent an infinite loop if the stream ends with \n\n.
	(parser_construct_message): Make sure our state starts off at
	INIT. Also check for the ERROR state in our parser_step() loop and
	return NULL if we encounter an error.

2006-03-03  Jeffrey Stedfast  <fejj@novell.com>

	* util/url-scanner.c (g_url_web_end): Allow urls such as
	"http://www.novell.com./path" (note the '.' before the path
	component).
	(g_url_addrspec_start): If the '@' is the first character in the
	match, then it isn't a valid email address.

2006-01-12  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Bumped version to 2.1.19

2006-01-19  Joe Shaw  <joeshaw@novell.com>

	* mono/DataWrapper.custom: We need to manually create a decoding
	filtering stream and wrap that in a StreamWrapper rather than the
	DataWrapper's GMimeStream directly, which contains undecoded data.

	* mono/GMime.metadata: Rename some enum members, add DataWrapper's
	GMimeStream property and MimePart's ContentObject properties as
	items which return an owned ref.

2006-01-12  Jeffrey Stedfast  <fejj@novell.com>

	** made a release of 2.1.18 **

	* gmime/gmime-stream-mem.c (g_mime_stream_mem_get_byte_array): Use
	g_return_val_if_fail() rather than g_return_if_fail() since we
	need to return NULL on error.

2006-01-09  Joe Shaw  <joeshaw@novell.com>

	* mono/Message.custom: Add a References property.  Based on a
	patch from D Bera <dbera.web@gmail.com>

2006-01-05  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Require gtk-sharp 2.4.0.  Set the mono API version
	to <major>.<minor>.0.<interface>, which initially is set to